# ChatAPP

./: .gitignore  conanfile.txt
chat/: CMakeLists.txt  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
chat/style/: stylesheet.qss
server/GateServer/: CMakeLists.txt  common.h  config.ini  configmgr.cpp  configmgr.h  cserver.cpp  cserver.h  httpconnection.cpp  httpconnection.h  logicsystem.cpp  logicsystem.h  main.cpp  message.grpc.pb.cc  message.pb.cc  message.pb.h  mysqldao.cpp  mysqldao.h  mysqlmgr.h  redismgr.h  singleton.h  varifygrpcclient.cpp  varifygrpcclient.h  verifaygrpcclient.h
server/GateServer/src/: asioioservicepool.cpp  asioioservicepool.h  config.ini  configmgr.h  cserver.h  httpconnection.cpp  main.cpp  message.grpc.pb.h  message.pb.h  mysqlmgr.cpp  redismgr.cpp  varifygrpcclient.h
server/VarifyServer/: config.json  email.js  package-lock.json  package.json  proto.js  server.js
